# akili-app

./: .gitignore  README.md  pyproject.toml  release_notes.md  render.yaml
.github/workflows/: build-all.yml  deploy-pages.yml
src/: main.py
src/assets/: outfit.css
src/components/: camera_viewfinder.py  credit_dialog.py  immersive_player.py  input_bar.py  media_preview.py  notification_bell.py  offline_retry.py  recording_indicator.py  rich_content.py  voice_input.py
src/core/: ai_utils.py  constants.py  question_types.py  state.py  theme.py
src/database/: manager.py
src/services/: ad_service.py  ai_service.py  assignment_service.py  audio.py  credit_service.py  evaluation.py  file_picker.py  gamification.py  lifecycle.py  share_service.py  tools.py  youtube_resolver.py
src/views/: assignment_view.py  course_creation.py  course_detail.py  dashboard.py  lesson_view.py  mock_exam.py  onboarding.py  parent_portal.py  premium_preview.py  premium_view.py  progress_view.py  quiz_history.py  quiz_history_view.py  quiz_view.py  settings_view.py  splash.py  timetable_view.py  tutor_chat.py  video_player.py
storage/data/: akili.db-shm  akili.db-wal
