[project]
name = "akili"
version = "1.0.0"
description = "AI-powered learning platform for students"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "ddgs>=9.14.4",
    "flet>=0.85.0",
    "flet-ads>=0.85.0",
    "flet-audio-recorder>=0.85.0",
    "flet-permission-handler>=0.85.0",
    "flet-video>=0.85.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flet]
org = "ng.kiri"
product = "Akili"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "ng.kiri.akili"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~3025212648"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.CAMERA" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.WAKE_LOCK" = true
"android.permission.READ_MEDIA_IMAGES" = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 250
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
